Added reset, links and fonts SASS partials

--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -1,1 +1,7 @@
+// Import modules
 @import "modules/colors";
+
+// Import partials
+@import "partials/reset";
+@import "partials/fonts";
+@import "modules/links";
