--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -1,8 +1,9 @@
 // Import modules
 @import "modules/colors";
 @import "modules/links";
+@import "modules/buttons";
 
 // Import partials
 @import "partials/reset";
 @import "partials/fonts";
-@import "modules/links";
+@import "partials/header";
