Finalized dropdown menu, in header

--- a/source/scss/modules/_colors.scss
+++ b/source/scss/modules/_colors.scss
@@ -4,6 +4,7 @@ $light-red:     #ff674f;
 
 $grey:          #7e7f84;
 $dark-grey:     #2a2d34;
+$medium-grey:   #999999;
 $light-grey:    #ededed;
 
 $white:         #ffffff;
