--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -5,5 +5,6 @@
 
 // Import partials
 @import "partials/reset";
+@import "partials/bootstrap-modify";
 @import "partials/fonts";
 @import "partials/header";
