--- a/source/scss/partials/_header.scss
+++ b/source/scss/partials/_header.scss
@@ -1,18 +1,53 @@
+// Header styles
 .header {
+    // Default link styles
     @include links($grey, $light-grey, $light-red, $red);
     a {
         @include font($family: $Arial);
     }
 
+    // Checkout button
     @include button($grey, $white, $light-grey, $red);
+
+    // Splitter line
+    .splitter {
+        background-color: $light-grey;
+        height: 1px
+    }
+
+    // Dropdown menu main links
+    .dropdown {
+        @include links($grey, $grey, $red, $light-red, none, none);
+        a {
+            @include font(18px, $family: $PTSans);
+        }
+    }
+
+    // Dropdown menu box
+    .dropdown-menu {
+        background-color: $medium-grey;
+        border: none;
+        border-top: 1px solid $white;
+        border-radius: 0;
+        box-shadow: 0px -2px 0px 0px $medium-grey;
+        padding: 1rem 0;
+
+        .dropdown-item {
+            transition: all 0.2s ease;
+            &:hover {
+                background-color: $red;
+            }
+        }
+
+        @include links($white, $white, $white, $white, none, none);
+        a {
+            @include font(16px, $family: $Arial);
+        }
+    }
 }
 
-.splitter {
-    background-color: $light-grey;
-    height: 1px
-}
 
-
+// Red dobble-line at the bottom
 .line {
     background-color: $red;
     @at-root #{&}--big {
