--- a/source/scss/partials/_homepage.scss
+++ b/source/scss/partials/_homepage.scss
@@ -1,30 +1,42 @@
-main {
-    #slider {
+#slider {
+    padding: 0;
+
+    .carousel-inner {
         max-height: 656px;
+    }
 
-        .carousel-inner {
-            height: 100%;
+    // Fix for bootstrap 4 carousel not being properly responsive
+    .carousel-item.active, .carousel-item-next, .carousel-item-prev {
+        display:block;
+    }
 
-            .carousel-caption {
-                bottom: 50%;
-                left: initial;
-                right: initial;
-                padding: 40px 100px;
-                background-color: transparentize($black, 0.4);
-                text-align: left;
+    .carousel-caption {
+        bottom: 50%;
+        left: initial;
+        right: initial;
+        padding: 40px 100px;
+        background-color: transparentize($black, 0.4);
+        text-align: left;
 
-                @include button();
-            }
+        @include button();
+    }
 
-            h1 {
-                @include font(59.3px, $white, $PTSans);
-                margin-bottom: 20px;
-            }
+    h1 {
+        @include font(59.3px, $white, $PTSans);
+        margin-bottom: 20px;
+    }
 
-            p {
-                @include font(14px, $white, $PTSans);
-                margin-bottom: 15px;
-            }
-        }
+    p {
+        @include font(14px, $white, $PTSans);
+        margin-bottom: 15px;
+    }
+
+    .carousel-indicators li {
+        border-radius: 50%;
+        width: 14px;
+        height: 14px;
+        flex: none;
+        -webkit-flex: none;
+        -webkit-box-flex: none;
     }
 }
