Added highlights sections

--- a/source/scss/partials/_header.scss
+++ b/source/scss/partials/_header.scss
@@ -60,7 +60,7 @@ header {
 }
 
 // Red dobble-line at the bottom
-.line {
+.line--red {
     height: 2px;
     position: absolute;
     box-sizing: content-box;
