--- a/source/scss/partials/_homepage.scss
+++ b/source/scss/partials/_homepage.scss
@@ -33,10 +33,41 @@
 
     .carousel-indicators li {
         border-radius: 50%;
-        width: 14px;
-        height: 14px;
+        width: 10px;
+        height: 10px;
         flex: none;
         -webkit-flex: none;
         -webkit-box-flex: none;
+    }
+}
+
+main {
+
+    h2 {
+        @include font(22.65px, $family: $PTSans);
+    }
+
+    .line--grey {
+        background-color: $light-grey;
+        height: 1px;
+        flex: 1;
+    }
+}
+
+#highlights {
+
+    img {
+        width: 100%;
+        height: 225px;
+        object-fit: cover;
+    }
+
+    @include links($red, $red, $red, $red);
+    a {
+        @include font(22.65px, $family: $PTSans);
+    }
+
+    p {
+        @include font($family: $Arial);
     }
 }
