Finnished homepage content

--- a/source/scss/modules/_colors.scss
+++ b/source/scss/modules/_colors.scss
@@ -2,8 +2,9 @@
 $red:           #f45a40;
 $light-red:     #ff674f;
 
-$grey:          #7e7f84;
 $dark-grey:     #2a2d34;
+$darkened-grey: #67686d;
+$grey:          #7e7f84;
 $medium-grey:   #999999;
 $light-grey:    #ededed;
 
