--- a/source/scss/partials/_homepage.scss
+++ b/source/scss/partials/_homepage.scss
@@ -44,7 +44,7 @@
 main {
 
     h2 {
-        @include font(22.65px, $family: $PTSans);
+        @include font(22.65px, $darkened-grey, $PTSans);
     }
 
     .line--grey {
@@ -69,5 +69,59 @@ main {
 
     p {
         @include font($family: $Arial);
+    }
+}
+
+.product {
+
+    > div:first-child {
+        border: solid 1px $light-grey;
+    }
+
+    .stars {
+        @include font(14px, $red);
+    }
+
+    img {
+        width: 100%;
+        height: 230px;
+        object-fit: cover;
+        border-bottom: solid 1px $light-grey;
+    }
+
+    .product--description {
+        border-bottom: 1px solid $light-grey;
+
+        @include links($darkened-grey, $darkened-grey, $darkened-grey, $darkened-grey);
+        a {
+            @include font(18px, $darkened-grey, $PTSans);
+        }
+
+        h4 {
+            @include font(14px, $darkened-grey, $PTSans);
+        }
+
+        p {
+            @include font(12px, $grey, $Arial);
+            line-height: 1.5;
+        }
+    }
+
+    .price {
+        @include font(14px, $red, $Arial);
+        @include links($red, $red, $red, $red, none, none);
+
+        p {
+            flex: 1;
+        }
+
+        span {
+            font-size: 9px;
+        }
+    }
+
+    @include button();
+    button {
+        width: 100%;
     }
 }
