Made header, footer and homepage responsive/mobile

--- a/source/scss/partials/_footer.scss
+++ b/source/scss/partials/_footer.scss
@@ -30,6 +30,10 @@ footer {
                 outline: none;
             }
         }
+
+        .input--mobile {
+            width: 100%;
+        }
     }
 
     .footer {
