--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -8,5 +8,6 @@
 @import "partials/bootstrap-modify";
 @import "partials/fonts";
 @import "partials/header";
-@import "partials/homepage";
 @import "partials/footer";
+@import "partials/homepage";
+@import "partials/contact";
