Added detail page

--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -10,4 +10,5 @@
 @import "partials/header";
 @import "partials/footer";
 @import "partials/homepage";
+@import "partials/detail";
 @import "partials/contact";
