--- a/source/scss/modules/_colors.scss
+++ b/source/scss/modules/_colors.scss
@@ -7,6 +7,7 @@ $darkened-grey: #67686d;
 $grey:          #7e7f84;
 $medium-grey:   #999999;
 $light-grey:    #ededed;
+$lightest-grey: #f2f1f1;
 
 $white:         #ffffff;
 $black:         #000000;
