--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,57 @@
-<h1>Home</h1>
+<div class="container-fluid hidden-md-down">
+    <div class="row">
+        <div id="slider" class="col-lg-12">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid" src="./app/assets/imgs/slider/1.jpg" alt="First slide">
+                        <div class="carousel-caption">
+                            <h1>RIGHT IS PINK.<br>LEFT IS BLUE</h1>
+                            <p>Inspired by Brasil’s bold colors and matching up to football’s on-pitch<br>playmakers, these kicks are ready to stand out.</p>
+                            <button class="px-4 py-2" type="button" name="call-to-action">SHOP BRASIL</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="./app/assets/imgs/slider/2.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="./app/assets/imgs/slider/3.jpg" alt="Third slide">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<main class="container pt-5 pb-4">
+    <div id="highlights" class="row">
+        <div class="col-lg-4">
+            <a href="#"><img class="img-fluid mb-4" src="./app/assets/imgs/highlights/1.jpg" alt="football shoes"></a>
+            <a href="#">FOOTBALL SHOES</a>
+            <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,<br>vivamus congue nulla leo, quis imperdiet magna.</p>
+        </div>
+        <div class="col-lg-4">
+            <a href="#"><img class="img-fluid mb-4" src="./app/assets/imgs/highlights/2.jpg" alt="modern clothes"></a>
+            <a href="#">MODERN CLOTHES</a>
+            <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,<br>vivamus congue nulla leo, quis imperdiet magna.</p>
+        </div>
+        <div class="col-lg-4">
+            <a href="#"><img class="img-fluid mb-4" src="./app/assets/imgs/highlights/3.jpg" alt="accessories"></a>
+            <a href="#">BAGS & ACCESSORIES</a>
+            <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,<br>vivamus congue nulla leo, quis imperdiet magna.</p>
+        </div>
+    </div>
+
+    <div class="row justify-content-center mt-5 mb-4">
+        <div class="col-lg-6 d-flex justify-content-between align-items-center">
+            <div class="line--grey"></div>
+            <h2 class="mx-4">POPULAR PRODUCTS</h2>
+            <div class="line--grey"></div>
+        </div>
+    </div>
+</main>
