Implemented product loading functionality
Added a product interface, a data service and product data.
Created product-list and product-details components, and added neceserry routing, to get to the product details page.

--- a/frontend/source/scss/partials/_bootstrap-modify.scss
+++ b/frontend/source/scss/partials/_bootstrap-modify.scss
@@ -22,7 +22,7 @@
 
 
 // Hack to make a sticky footer + fixes of side-effects
-body {
+my-app {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
@@ -39,6 +39,6 @@ body {
     width: 100%;
 }
 
-main {
+router-outlet + * {
     flex: 1;
 }
