--- a/frontend/source/scss/partials/_contact.scss
+++ b/frontend/source/scss/partials/_contact.scss
@@ -17,4 +17,9 @@
             outline: none;
         }
     }
+
+    .form-warning {
+        position: absolute;
+        color: $light-red;
+    }
 }
