--- a/src/app/product/product-list.component.html
+++ b/src/app/product/product-list.component.html
@@ -12,7 +12,7 @@
             <div class="product--description px-3 mt-3 pb-2">
                 <a [routerLink]="['/product', product.id]">{{product.name}}</a>
                 <h4 class="my-1">{{product.category | uppercase}}</h4>
-                <p>{{product.description}}</p>
+                <p>{{product.description | slice:0:110 }}</p>
             </div>
             <div class="price d-flex justify-content-end align-items-center px-3 py-2">
                 <p>{{product.price | currency:'USD':true:'2.2-2'}}</p>
