Made BUY NOW buttons point to details page

--- a/src/app/product/product-list.component.html
+++ b/src/app/product/product-list.component.html
@@ -29,6 +29,6 @@
                 </a>
             </div>
         </div>
-        <button class="py-2" type="button" name="buy">BUY NOW</button>
+        <a [routerLink]="['/product', product.id]"><button class="py-2" type="button" name="buy">BUY NOW</button></a>
     </div>
 </div>
